--- a/HTML 5 Assignment/Module 5).html
+++ b/HTML 5 Assignment/Module 5).html
@@ -62,6 +62,7 @@
 <!-- </html> -->
 <!--  -->
 <!-- 3)Semantic element in HTML5? -->
+<!-- Semantic html tags are tags that define the meaning of the content they contain.for example tags like <header>,<footer> semantic html-->
 <!-- Ans:- -->
 <!-- <aside> Defines content aside from the page content -->
 <!--  -->
