--- a/dropdown.html
+++ b/dropdown.html
@@ -8,10 +8,16 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel='stylesheet' type='text/css' media='screen' href='style.css'> -->
-    <script src='main.js'></script>
     <style>
+        * {
+            padding: 0;
+            margin-top: 0;
+            box-sizing: border-box;
+        }
+
         .navbar {
             width: 100%;
+            padding: 10px;
             height: auto;
             background-color: blue;
             display: flex;
@@ -25,7 +31,7 @@
             color: white;
             text-decoration: none;
             font-size: 35px;
-            margin-right: 800px;
+            /* margin-right: 800px; */
         }
 
         button {
@@ -54,7 +60,7 @@
             position: absolute;
             text-align: center;
             width: 150px;
-            height: 150px;
+            /* height: 150px; */
             left: 0px;
             margin-top: 9%;
             background-color: blue;
@@ -64,7 +70,8 @@
 
         }
 
-        .more:hover .submanu {
+        .more:hover .submanu,
+        .more:focus-within {
             display: block;
             background-color: blue;
             /* top: 35px;
@@ -74,8 +81,8 @@
         .menu1 {
             position: absolute;
             background-color: blue;
-            width: 93px;
-            left: 190px;
+            /* width: 93px; */
+            left: 130px;
             top: 120px;
             display: none;
         }
@@ -88,6 +95,12 @@
         .dpdn:hover .menu1 {
             display: block;
 
+        }
+
+        .menus {
+            width: 40%;
+            display: flex;
+            justify-content: space-around;
         }
     </style>
 </head>
@@ -114,7 +127,7 @@
             </div>
         </div>
         <div>Blogs</div>
-        <div>Contect</div>
+        <div>Contacts</div>
         <button>Login</button>
 
     </div>
