--- a/CSS/CLICKPATH.html
+++ b/CSS/CLICKPATH.html
@@ -13,78 +13,77 @@
 
 <body>
     <div class="main_content">
-        <div class="clickpath">
+        <div class="menubar">
             <div class="ul">
                 <ul>
                     <li class="logo">L <span>ogo</span></li>
                     <li class="home">HOME</li>
-                    <li class="home">ABOUT US</li>
-                    <li class="home">PORTFOLIO</li>
-                    <li class="home">PRICING</li>
-                    <li class="home">TEAM</li>
-                    <li class="home">BLOG</li>
-                    <li class="home">CONTACT</li>
+                    <li>ABOUT US</li>
+                    <li>PORTFOLIO</li>
+                    <li>PRICING</li>
+                    <li>TEAM</li>
+                    <li>BLOG</li>
+                    <li>CONTACT</li>
                 </ul>
             </div>
             <div class="para">
 
                 <p>
                 <h3>Our Clients Are Our First Priority</h3>
-                </p>
+                </p>&nbsp;
 
-                <p class="wcm">WELCOME TO SKY</p>
+                <p class="welcom">WELCOME TO SKY</p> &nbsp;&nbsp;&nbsp;
 
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quos tempora
-                    doloremque, quae veritatis, vero explicabo ipsam aliquid eos id facere optio unde numquam iste!
-                    Lorem ipsum dolor sit.</p>
+                <p class="parag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique laborum, rerum
+                    delectus laudantium cum quos Lorem ipsum dol</p>
             </div>
 
             <div class="icon">
-                <i class="fa-solid fa-arrow-left"></i>
-                <i class="fa-solid fa-arrow-right"></i>
+                <i class="fa fa-angle-left"></i>
+                <i class="fa fa-angle-right"></i>
             </div>
             <div class="button">
-                <button class="button1">GET STARTED NOW</button>
-                <button class="button2">LEARN MORE</button>
+                <button class="btnF">GET STARTED NOW</button>&nbsp;&nbsp;
+                <button class="btnS">LEARN MORE</button>
             </div>
         </div>
 
-        <div class="ancor">
+        <div class="icon2">
             <i class="fa-solid fa-anchor"></i>
         </div>
     </div>
 
     <div class="lastpage">
         <div class="sleek">
-            <i class="fa-solid fa-infinity"></i>
+            <i class="fa-solid fa-infinity"></i><br><br>
 
-            <h3>SLEEK DESIGN</h3>
+            <h3>SLEEK DESIGN</h3> &nbsp;&nbsp;
 
             <p class="lastp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quasi culpa
                 incidunt.</p>
         </div>
 
         <div class="clen">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart"></i> <br><br>
 
-            <h3>CLEAN CODE</h3>
+            <h3>CLEAN CODE</h3> &nbsp;&nbsp;
 
             <P class="lastp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quasi culpa
                 incidunt.</P>
         </div>
 
         <div class="creative">
-            <i class="fa-solid fa-lightbulb"></i>
-            <h3>CREATIVE IDEAS</h3>
+            <i class="fa-solid fa-lightbulb"></i> <br><br>
+            <h3>CREATIVE IDEAS</h3> &nbsp;&nbsp;
 
             <P class="lastp"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quasi culpa
                 incidunt.</P>
         </div>
 
         <div class="free">
-            <i class="fa-solid fa-window-restore"></i>
+            <i class="fa-solid fa-window-restore"></i><br><br>
 
-            <h3>FREE SUPPORT</h3>
+            <h3>FREE SUPPORT</h3>&nbsp;&nbsp;
 
             <p class="lastp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis quasi culpa
                 incidunt.</p>
@@ -92,7 +91,7 @@
 
 
     </div>
-    </div>
+
 
 </body>
 
